<resources>
    <string name="app_name">app_name</string>
    <string name="ast_version">ast_version</string>
    <string name="ast_url_privacity">https://policies.google.com/privacy?hl=es</string>
    <string name="ast_licences">
        Copyright 2014-2020\n\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at
\n\n
   http://www.apache.org/licenses/LICENSE-2.0
\n\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
\n
Wigets
        - Dialog Password\n
        - Dialog About\n
        - Dialog Browser\n
        - Dialog Color chooser\n
Custom views\n
        - On Board
    </string>
    <string name="ast_lb_information">Información de la aplicación</string>
    <string name="ast_lb_policy">Política de privacidad</string>
    <string name="ast_lab_licences">Licencias de código abierto</string>

    <string name="ast_msg_new_version">Hay una nueva versión disponible desea actualizar ahora?</string>
    <string name="ast_msg_title_update">Actualizar</string>
    <string name="ast_btn_accept">Aceptar</string>
    <string name="ast_btn_cancel">Cancelar</string>
</resources>
