<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/ast_background"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/astOnBack"
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ast_chevron_back"
            android:tint="?android:textColorPrimary" />

     </RelativeLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="?android:textColorPrimary"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ast_version" />
            <TextView
                android:id="@+id/tvVersion"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="1.0"
                android:layout_marginLeft="5dp" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/astbtnabout"
            android:background="@drawable/ast_button_card"
            android:minWidth="250dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:gravity="center"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="?android:textColorPrimary"
                android:text="@string/ast_lb_information"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnShowPolicy"
            android:background="@drawable/ast_button_card"
            android:minWidth="250dp"
            android:clickable="true"
            android:gravity="center"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="?android:textColorPrimary"
                android:text="@string/ast_lb_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/astbtnshowcode"
            android:background="@drawable/ast_button_card"
            android:minWidth="250dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="?android:textColorPrimary"
                android:text="@string/ast_lab_licences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>